force-app/main/default/objects/ProductServiceCampaignItem/fields/SVMXA360__DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeliveryMethod__c</fullName>
    <description>The Delivery Method picklist indicates what manner of output record (if any) will be produced from the PSCI Result Line. This value defaults to the “Default Delivery Method” value indicated in the PSC header record for the PSCI Line, but may be updated manually as part of managing Result Lines.</description>
    <inlineHelpText>The Delivery Method picklist indicates what manner of output record (if any) will be produced from the PSCI Result Line. This value defaults to the “Default Delivery Method” value indicated in the PSC header record for the PSCI Line, but may be updated manually as part of managing Result Lines.</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__DeliveryMethod</valueSetName>
    </valueSet>
</CustomField>