force-app/main/default/objects/ProductServiceCampaignItem/fields/SVMXA360__Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Location__c</fullName>
    <description>Stores the Asset&apos;s Location</description>
    <formula>Asset.Location.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>