force-app/main/default/objects/ProductServiceCampaignItem/fields/SVMXA360__PSCEngineLogId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PSCEngineLogId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Product Service Campaign Item with PSC Engine Log.</description>
    <label>PSC Engine Log</label>
    <referenceTo>SVMXA360__PSCEngineLog__c</referenceTo>
    <relationshipLabel>Product Service Campaign Items</relationshipLabel>
    <relationshipName>Product_Service_Campaign_Items</relationshipName>
    <type>Lookup</type>
</CustomField>