force-app/main/default/objects/ProductServiceCampaignItem/fields/SVMXA360__SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SerialNumber__c</fullName>
    <description>Stores the Asset&apos;s Serial Number</description>
    <formula>Asset.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>